# organized-carnival

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  carnival.py  pyproject.toml
.github/workflows/: ci_testing.yml
src/: __init__.py  file_infos.py  file_scan.py  hasher.py
tests/: __init__.py  test_file_scan.py  test_hasher.py
