[tool.poetry]
name = "organized-carnival"
version = "0.0.0"
description = ""
authors = ["Frédéric LAUDARIN <frederic.laudarin@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.10, <3.11"
click = "^8.1.3"


[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
