[tool.poetry]
name = "organized-carnival"
version = "0.0.0"
description = ""
authors = ["Frédéric LAUDARIN <frederic.laudarin@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.10, <3.11"
click = "^8.1.3"


[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
pytest = "^7.2.0"
black = "^22.10.0"
mypy = "^0.990"
pre-commit = "^2.20.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
exclude = '''
/(
    \.git
  | \.github
  | \.pytest_cache
  | \.mypy_cache
  | dist
)/
'''

[tool.isort]
profile = "black"